# happybird-watcher

./: .gitignore  README.md  pyproject.toml  run.sh  run_widgets.sh
happybird_watcher/: __init__.py  endpoints.py  widgets.py
