[project]
name = "happybird-watcher"
version = "0.1.0"
description = "A SyftBox app for monitoring and displaying happybird.txt files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipywidgets>=8.0.0",
    "fastapi>=0.100.0",  
    "uvicorn>=0.23.0",
    "requests>=2.28.0",
]

[tool.uv.sources]
# syft-widget is a local dependency - adjust path as needed
syft-widget = { path = "../../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["happybird_watcher"]
